<resources>
    <string name="app_name">ICinema</string>
    <string name="hi_page">iCinema provides you with a unique experience to know everything related to movies, you can watch, book and search for everything you want</string>
    <string name="register">Register</string>
    <string name="guest">Guest</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="enter_number">Enter your country code and your\n phone number</string>
    <string name="country">Country</string>
    <string name="phone_number">Phone Number</string>
    <string name="get_code">Get Code</string>
    <string name="egypt">Egypt</string>
    <string name="allcountry">+</string>
    <string name="new_user">New User</string>
    <string name="new_user_data">Enter your information</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="please_phone">Please Enter Your Country and Phone Number Correct</string>
    <string name="verification">Verification</string>
    <string name="confirm_otp_text">Confirm</string>
    <string name="pref_string">Let\'s take a look at our interests</string>
    <string name="adventure">Adventure</string>
    <string name="drama">Drama</string>
    <string name="sport">Sport</string>
    <string name="action">Action</string>
    <string name="thriller">Thriller</string>
    <string name="crime">Crime</string>
    <string name="comedy">Comedy</string>
    <string name="animation">Animation</string>
    <string name="romance">Romance</string>
    <string name="fantasy">Fantasy</string>
    <string name="science_fiction">Science Fiction</string>
    <string name="family">Family</string>
    <string name="horror">Horror</string>
    <string name="egyptian">Egyptian</string>
    <string name="german">German</string>
    <string name="japanese">Japanese</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="chinese">Chinese</string>
    <string name="turkish">Turkish</string>
    <string name="indonesian">Indonesian</string>
    <string name="spanish">Spanish</string>
    <string name="indian">Indian</string>
    <string name="greek">Greek</string>
    <string name="italian">Italian</string>
    <string name="russian">Russian</string>
    <string name="language">Which language do you prefer ?</string>
    <string name="get_started">Get Started</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view">View</string>
    <string name="for_you">For you</string>
    <string name="cinema">Cinemas</string>
    <string name="showing_now">Showing Today</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="book_now">Book Now</string>
    <string name="text_example">Brief: Jake Sully lives with his newfound family formed on the planet of Pandora. Once a familiar threat returns to finish what was previously started, Jake must work with Neytiri and the army of the Na\'vi race to protect their planetBrief: Jake Sully lives with his newfound family formed on the planet of Pandora. Once a familiar threat returns to finish what was previously started, Jake must work with Neytiri and the army of the Na\'vi race to protect their planet</string>
    <string name="menu">Menu</string>
    <string name="general">General</string>
    <string name="mode">Mode</string>
    <string name="activity">Activity</string>
    <string name="saved">Saved</string>
    <string name="icinemawallet">ICinema Wallet</string>
    <string name="languagchoose">Language</string>
    <string name="service">Service</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="log_out">Log Out</string>
    <string name="pick_a_day">Pick a day</string>
    <string name="choose_available_time">Choose Available Time</string>
    <string name="pick_a_time">Pick time</string>
    <string name="next">Next</string>
    <string name="ordinary">Ordinary</string>
    <string name="premium">Premium</string>
    <string name="booked">Booked</string>
    <string name="selected">Selected</string>
    <string name="tickets">Tickets</string>
    <string name="hold">Hold any object to delete</string>
    <string name="credit_card">Credit Card</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="fawry">Fawry</string>
    <string name="i_cinema_wallet">ICinema Wallet</string>
    <string name="card_holder">Card Holder</string>
    <string name="card_number">Card Number</string>
    <string name="security_code">Security Code</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="wallet_number">Wallet Number</string>
    <string name="password">Password</string>
    <string name="open_fawry">ICinema wants to open myFawry app</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="review">Reviews</string>
    <string name="related">Related</string>
    <string name="my_profile">My Profile</string>
    <string name="city">City</string>
    <string name="your_genres">Your Genres</string>
    <string name="show_details">Show Details</string>
    <string name="book_success">Your tickets had been successfully booked \n you can get it anytime from Booking</string>
    <string name="view_booking">View Booking</string>
    <string name="home">Home</string>
    <string name="watch_languages">Watch Languages</string>
    <string name="click_on_image">click On Image to change it</string>
    <string name="choose_available_day">Choose available day</string>

</resources>