<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".InfoActivityPage">
        <ProgressBar
            android:id="@+id/get_city_progress"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


        <RelativeLayout
            android:id="@+id/up_cointainer"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/back_button"
                style="@style/back_button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/top_text_view"
                style="@style/register_text_phone_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="180dp"
                android:text="@string/new_user"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </RelativeLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_photo"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_alignParentStart="true"
            android:layout_gravity="center"
            android:src="@drawable/account_pic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/up_cointainer" />
        <TextView
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/click_on_image"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:lines="2"
            android:text="@string/new_user_data"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_photo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/full_name_layout_edit_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="326dp"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView4">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/full_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:paddingStart="10dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/age_layout_edit_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="326dp"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/full_name_layout_edit_text">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/age_edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/age"
                android:inputType="number"
                android:maxLength="2"
                android:paddingStart="10dp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/gender_layout_edit_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="326dp"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/age_layout_edit_text">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/gender_edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/gender"
                android:paddingStart="10dp"
                android:text=" " />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/gender_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@id/gender_layout_edit_text"
            app:layout_constraintEnd_toEndOf="@id/gender_layout_edit_text"
            app:layout_constraintStart_toStartOf="@id/gender_layout_edit_text"
            app:layout_constraintTop_toTopOf="@id/gender_layout_edit_text">

            <RadioButton
                android:id="@+id/female_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female" />

            <RadioButton
                android:id="@+id/male_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/male" />
        </RadioGroup>
        <androidx.cardview.widget.CardView
android:layout_marginTop="20dp"
            android:layout_width="326dp"
            android:layout_height="55dp"
            app:layout_constraintTop_toBottomOf="@id/gender_radio_group"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="5dp"
            >

            <RelativeLayout
                android:background="@android:color/transparent"
                android:id="@+id/city_cointainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/city_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="City"
                    android:textAlignment="center" />
                <!--                        <EditText-->
                <!--                            android:visibility="gone"-->
                <!--                            android:layout_marginStart="25dp"-->
                <!--                            android:layout_marginEnd="25dp"-->
                <!--                            android:id="@+id/city_edit_text"-->
                <!--                            android:layout_width="match_parent"-->
                <!--                            android:layout_height="wrap_content"-->
                <!--                            android:layout_centerInParent="true"-->
                <!--                            android:textAlignment="center" />-->


                <ImageView
                    android:id="@+id/get_city_image"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/location" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register_button"
            style="@style/register_btn"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:text="@string/register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gender_layout_edit_text" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>