<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PhonePage">

        <RelativeLayout
            android:id="@+id/up_cointainer"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <!--            <com.applandeo.materialcalendarview.CalendarView-->
            <!--                android:id="@+id/calendarView"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="match_parent" />-->

            <ImageButton
                android:id="@+id/back_button"
                style="@style/back_button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/top_text_view"
                style="@style/register_text_phone_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="180dp"
                android:text="@string/register"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </RelativeLayout>


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="140dp"
            android:lines="2"
            android:text="@string/enter_number"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/up_cointainer" />
        <!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/full_name_layout_edit_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="326dp"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView4">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/country_layout_edit_textt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/country"
                android:paddingStart="10dp"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/number_textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="326dp"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/full_name_layout_edit_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/number_textInput"

                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:maxLength="13"
                android:paddingStart="10dp"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/getcodeButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="120dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/register_button_background_disabled"
            android:enabled="true"
            android:text="@string/get_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/number_textInputLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>